backend for user request